Style.css
h1{
    color:#008080;
    text-align:center;
    font-size:40px;
    font-family: Arial, San-Serif;
}

label, a:link, a:visited{
    font-family: Arial, San-Serif;
    font-size:20px;
    background-color: #ffd0ef;
    border-radius: 8px;
    color: black;
    border: 3px #ff45be solid;
    text-decoration: none;
    cursor: pointer;
    padding-left: 4px;
    padding-right: 4px;
    display: inline-block;
}

label:hover , a:hover{
    background-color: #ff78d0;
    font-size:20px;
    text-decoration: none;
}

label:active , a:active{
    background-color: #cf0086;
    text-decoration: none;
}

